--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,15 +47,19 @@ dependencies {
 
 gradle.taskGraph.afterTask { task ->
     StringBuffer taskDetails = new StringBuffer()
-    taskDetails << """"-------------
+    taskDetails << """
 name:$task.name group:$task.group : $task.description
 conv:$task.convention.plugins
 """
     task.inputs.files.each{ it ->
-        taskDetails << "in:  ${it.absolutePath}\n"
+        if (it.absolutePath.contains("InspectAndroidBuild")) {
+            taskDetails << "in:  ${it.absolutePath}\n"
+        }
     }
     task.outputs.files.each{ it ->
-        taskDetails << "out: ${it.absolutePath}\n"
+        if (it.absolutePath.contains("InspectAndroidBuild")) {
+            taskDetails << "out: ${it.absolutePath}\n"
+        }
     }
 
     taskDetails << "-------------"
