Add dummy keystore

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,21 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            storeFile file(rootDir.getPath() + "/keystore")
+            storePassword "hahaha"
+            keyAlias "haha"
+            keyPassword "xixixi"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
